Bug #39404  	Core in NdbEventBuffer::deleteUsedEventOperations()